<resources>
    <string name="app_name">NunezMA_U2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="image_desc">Description</string>

    <string name="asteroid_text">Asteroids</string>
    <string name="asteroid_play">Play</string>
    <string name="asteroid_config">Config</string>
    <string name="asteroid_about">About</string>
    <string name="asteroid_exit">Exit</string>

    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_0">0</string>
    <string name="calc_plus">+</string>
    <string name="calc_equals">=</string>
    <string name="calc_cero">C</string>
    <string name="calc_pts">Pts</string>
</resources>
